tests/argocd-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: my-release
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: "2022-10-21T07:19:38Z"
  generation: 4
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
    helm.sh/chart: argo-cd-5.5.24
  name: my-release-argocd-server
  namespace: default
  resourceVersion: "1145566"
  uid: 483c8430-0c9f-4ae7-9e17-eb74f20e9073
spec:
  ingressClassName: nginx
  rules:
  - host: tr1.platform.tabii.com
    http:
      paths:
      - backend:
          service:
            name: my-release-argocd-server
            port:
              number: 80
        path: /gitops(/|$)(.*)
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 172.20.178.197
